<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">캠퍼스:달</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_subtitle">우리 학교 배달앱</string>
    <string name="select_campus">캠퍼스 선택하기</string>

    <string name="main">메인</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="random">아무거나</string>
    <string name="see_more">더 보기</string>

    <string-array name="categories">
        <item>치킨</item>
        <item>피자</item>
        <item>중국집</item>
        <item>한식/분식</item>
        <item>도시락/돈까스</item>
        <item>족발/보쌈</item>
        <item>냉면</item>
        <item>기타</item>
    </string-array>

    <string name="title_activity_info">상세 정보</string>
    <string name="open_time"> • 영업시간</string>
    <string name="won">원</string>
    <string name="see_flyer">전단지 보기</string>
    <string name="random_guide">"아무거나 먹고 싶다면
주사위를 던져 보세요!"</string>
    <string name="participate_in">참여하기</string>
    <string name="facebook_page">페이스북 페이지</string>
    <string name="report_restaurant">맛집 제보하기</string>
    <string name="report_to_camdal">캠달에 건의/문의하기</string>
    <string name="settings">설정</string>
    <string name="change_campus">캠퍼스 바꾸기</string>

    <string name="report_camdal_title">캠달에게 건의/문의합니다!</string>
    <string name="report_camdal_content"/>
    <string name="report_restaurant_title">[Android][맛집제보]</string>
    <string name="report_restaurant_content">이 가게도 추가해 주세요!</string>
    <string name="select_app">사용할 앱을 선택하세요.</string>
    <string name="title_activity_flyer">전단지 보기</string>
    <string name="please_check_connectivity">인터넷 연결을 확인해 주세요.</string>
    <string name="retry">재시도</string>
    <string name="exit">종료</string>
    <string name="initial_download_guide">"초기 다운로드를 시작합니다.
완료까지 30초 정도 소요됩니다."</string>
    <string name="too_old_version">"애플리케이션의 버전이 너무 낮습니다.
스토어에서 업데이트를 해주세요."</string>
    <string name="title_activity_intro">IntroActivity</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_see_more">더보기</string>

    <string name="drawer_order">주문하기</string>
    <string name="drawer_see_more">더보기</string>
    <string name="drawer_recommend">추천</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_restaurant_suggestion">음식점추가 / 입점문의</string>
    <string name="restaurant_suggestion">음식점추가 / 입점문의</string>
    <string name="title_activity_rsby_user">음식점 제보하기</string>
    <string name="title_activity_rsby_owner">음식점 입점하기</string>
    <string name="rsby_owner">등록하기</string>
    <string name="minimum"> • 최소배달금액</string>
    <string name="title_activity_campuses">캠퍼스 선택하기</string>
    <string name="retention">재주문율</string>
    <string name="title_activity_recommend">추천</string>
    <string name="title_activity_restaurant_correction">매장정보 수정</string>
    <string name="share">맛집공유</string>
    <string name="evaluation">평가하기</string>
    <string name="campus">캠퍼스</string>
    <string name="current_campus">현재 캠퍼스</string>
    <string name="select_another_campus">다른 캠퍼스 선택하기</string>
    <string name="request">문의하기</string>
    <string name="request_of_camdal">캠달 팀에 문의하기</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_campus_select">LoginCampusSelectActivity</string>
    <string name="title_activity_entrypoint">EntrypointActivity</string>
    <string name="title_activity_recent_call_fragment">RecentCallFragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_root">RootActivity</string>

    <string name="disappear">이 매장이 없어졌어요</string>
    <string name="wrong_menu">메뉴 정보가 틀려요</string>
    <string name="wrong_flyer">전단지가 잘 안보여요</string>
    <string name="wrong_number">매장 전화번호가 틀려요</string>
    <string name="wrong_office_hours">영업시간 정보가 틀려요</string>
    <string name="correction_detail">자세한 수정사항을 적어주세요</string>
    <string name="send_correction">수정 사항 보내기</string>
    <string name="title_activity_request">캠달 팀에 문의하기</string>
    <string name="email">문의하시는 분 이메일</string>
    <string name="request_detail">문의사항을 적어주세요</string>
    <string name="required">* 필수</string>
    <string name="restaurant_name">음식점 이름</string>
    <string name="restaurant_phone_number">음식점 전화번호</string>
    <string name="office_hours">영업시간</string>
    <string name="flyer">전단지</string>
    <string name="scan">(스캔 이미지일 경우 가장 좋습니다)</string>
    <string name="trend">[최근 주문수가 높은 집]</string>
    <string name="no_contents_store">등록된 음식점이 없습니다ㅠㅠ</string>
    <string name="title_activity_rsby_user_dialog">RSbyUserDialogActivity</string>
    <string name="thanks">등록해주셔서 감사합니다!</string>
    <string name="popup_detail">캠퍼스:달에서 해당음식점을 확인하고\n빠른시일내에 추가하겠습니다.</string>
    <string name="ok">확인</string>
    <string name="popup_description">전단지가 잘 보이지 않거나, 정보확인이\n필요한 경우 추가 연락을 드릴 수 있습니다.</string>
    <string name="title_activity_rcpop_up">RCPopUpActivity</string>
    <string name="success">수정사항 요청이\n완료되었습니다!</string>
    <string name="correction_popup_detail">캠퍼스:달에서 해당음식점을 확인하고\n빠른시일내에 수정하겠습니다.</string>
    <string name="title_activity_campus_selection">CampusSelectionActivity</string>
    <string name="new_campus">새로운 캠퍼스</string>
    <string name="my_number_of_calls">내 주문수</string>
    <string name="total_number_of_calls">총 주문수</string>
    <string name="show_info">정보보기</string>
    <string name="recommend">추천</string>
</resources>
