<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
                tools:context="com.lchpatners.shadal.InitializationActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_subtitle"
            android:textColor="@color/white100"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white100"
            android:textSize="48sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_bike_rider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/select_campus"
            android:layout_width="210dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_long_white_button"
            android:text="@string/select_campus"
            android:textColor="@color/primary"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="210dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:alpha="0.5"
            android:background="@drawable/bg_long_white_button"
            android:clickable="false"
            android:text="GO!"
            android:textColor="@color/primary"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>
