<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white100"
                android:orientation="vertical"
                tools:context="com.lchpatners.shadal.RequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_bar"
            android:layout_marginTop="18dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_small_add_email"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/email"
                android:textColor="@color/light_grey"
                android:textSize="14sp"/>

        </LinearLayout>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/list_background"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_email"
            android:layout_marginTop="18dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_pen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_small_add_pen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/request_detail"
                android:textColor="@color/light_grey"
                android:textSize="14sp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/et_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/list_background"
            android:clickable="true"
            android:editable="true"
            android:gravity="top"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/tool_bar"
        android:text="@string/request"
        android:textColor="@color/white100"
        android:textSize="15dp"
        android:textStyle="bold"/>

</RelativeLayout>
