<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white100"
                android:orientation="vertical"
                tools:context="com.lchpatners.shadal.setting.CampusChangeActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/icon_small_add_campus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/current_campus"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/campus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/current_campus"
            android:textColor="@color/primary"
            android:textSize="19sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/layout_2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/icon_small_add_change"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_campus"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_3"
        android:layout_marginTop="5dp"
        android:background="@color/divider"></RelativeLayout>

    <ListView
        android:id="@+id/campusSelect_campusList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:divider="@color/divider"
        android:dividerHeight="0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/tool_bar_background">

        <Button
            android:id="@+id/campusSelect_confirmButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tool_bar"
            android:text="@string/change_campus"
            android:textColor="@color/white100"
            android:textSize="15dp"
            android:textStyle="bold"/>
    </RelativeLayout>

</RelativeLayout>
